# CryptoGotchi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HOTFIX-TECHNICAL-ANALYSIS-500.md  INSTALLATION_RAPIDE_FR.txt  LICENSE  MANIFEST.txt  README.md  RELEASE-NOTES-v0.7.3-FR.md  SECURITY.md  THIRD_PARTY_NOTICES.md  VALIDATION-v0.7.3.txt  VALIDATION.md  pyproject.toml  readme  requirements.txt
config/: cryptogotchi.example.toml
cryptogotchi/: ai_clients.py  alerts.py  app.py  config.py  connectivity.py  db.py  display.py  i18n.py  lcd_renderer.py  lcd_test.py  market.py  market_sessions.py  notifiers.py  personality.py  ranking.py  system_info.py  technical_analysis.py  toml_writer.py  wifi.py
docs/: ANALYSE_15M_1H_4H_FR.md  BASELINE_V071_ET_SECURITE_RESEAU.md  BLUETOOTH_FAILOVER_FR.md  BLUETOOTH_TETHERING.md  COMPANION_AND_AI.md  GUIDE_UTILISATEUR_FR.md  IMAGE_BUILD.md  INSTALLATION.md  INSTALLATION_SURE_FR.md  LCD_1IN44.md  MARKET_INTEGRITY.md  ONLINE_RANKING_API.md  SECURITY.md  SOCIAL_NETWORKS.md  USB_GADGET.md  USER_GUIDE_EN.md
github/: PULL_REQUEST_TEMPLATE.md
image-builder/: build-image.sh
scripts/: bluetooth-pair.sh  configure-lcd.sh  cryptogotchi-bluetooth-agent.py  cryptogotchi-bluetooth-helper  cryptogotchi-connectivity-watch  diagnostics-bluetooth.sh  diagnostics.sh  enable-usb-gadget.sh  install-waveshare.sh  install.sh  migrate-config.py  preflight-technical.py  repair-v0.6.0-database.sh  run-dev.sh  run-windows.ps1  test-lcd.sh  uninstall.sh
systemd/: cryptogotchi-bluetooth-agent.service  cryptogotchi-connectivity-watch.service  cryptogotchi.service  (+1 more)
(+44 files in other folders)
