[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptogotchi-mikpoly"
version = "0.7.3"
description = "Open-source crypto market companion for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "mikpoly"}]
license = "MIT"
dependencies = [
  "Flask>=3.0,<4",
  "requests>=2.31,<3",
  "waitress>=3.0,<4",
  "Pillow>=10.0,<13",
  "tomli>=2.0,<3; python_version < '3.11'",
]

[project.scripts]
cryptogotchi = "cryptogotchi.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cryptogotchi*"]

[tool.setuptools.package-data]
cryptogotchi = ["templates/*.html", "static/*"]
